[gd_scene load_steps=9 format=2]

[ext_resource path="res://Items/AirLock/BreakableAirLock.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/LevelCore.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/Level5/Level5.gd" type="Script" id=3]
[ext_resource path="res://Items/Torch/Torch.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/Interactables/AirLeak/AirLeakScene.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/Statics/Corridor/Corridor.tscn" type="PackedScene" id=6]
[ext_resource path="res://Levels/Statics/WallWithHole/WallWithHole.tscn" type="PackedScene" id=7]
[ext_resource path="res://Levels/Statics/DeadEnd/DeadEnd.tscn" type="PackedScene" id=8]

[node name="Level5" type="Node2D"]
script = ExtResource( 3 )

[node name="Ship" type="Node2D" parent="."]

[node name="DeadEnd" parent="Ship" instance=ExtResource( 8 )]
position = Vector2( 528.87, 0 )

[node name="Corridor" parent="Ship" instance=ExtResource( 6 )]

[node name="BreakableAirLock" parent="Ship" instance=ExtResource( 1 )]
position = Vector2( -511.376, 0 )

[node name="WallWithHole" parent="Ship" instance=ExtResource( 7 )]
position = Vector2( 264.906, 0.803955 )

[node name="LevelCore" parent="." instance=ExtResource( 2 )]

[node name="Starts" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Starts"]
position = Vector2( 617.637, -16.9706 )

[node name="Position2D2" type="Position2D" parent="Starts"]
position = Vector2( -270.833, -255.688 )

[node name="Torch" parent="." instance=ExtResource( 4 )]
position = Vector2( 341.883, 55.8208 )
linear_velocity = Vector2( 5, 16 )
angular_velocity = 3.0

[node name="AirLeak" parent="." instance=ExtResource( 5 )]
position = Vector2( 161.253, -128.289 )

[node name="AirLeak2" parent="." instance=ExtResource( 5 )]
position = Vector2( 784.08, 128.657 )
rotation = 2.31168

[node name="AirLeak3" parent="." instance=ExtResource( 5 )]
position = Vector2( -182.634, 126.508 )
rotation = 3.13789
